--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "devDependencies": {
     "react-scripts": "0.9.0",
-    "redux-devtools": "^3.3.2"
+    "redux-devtools": "^3.3.2",
+    "transform-loader": "^0.2.3"
   },
   "dependencies": {
     "axios": "^0.15.3",
