Start with create-react-app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "constellations",
+  "name": "constellation playground",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
