--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.15.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-modal": "^1.6.5",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
